--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         document.getElementById("payment-form").addEventListener("submit", function (event) {
             let form = event.target;
             if (!form.checkValidity()) {
-                event.preventDefault(); // Evita el envío del formulario
+                event.preventDefault(); 
                 event.stopPropagation();
-                document.getElementById("error-message").classList.remove("d-none"); // Muestra el mensaje de error
+                document.getElementById("error-message").classList.remove("d-none"); 
             }
-            form.classList.add("was-validated"); // Aplica la validación visual de Bootstrap
+            form.classList.add("was-validated"); 
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
